<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_message1"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="abcd@abcd.com"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
   <EditText
       android:id="@+id/edtPassword"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="5dp"
       android:hint="@string/app_message3"
       android:textSize="20sp"
       android:background="#FFFFFF"
       android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvLongClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/app_message2"
        android:textSize="15sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/app_btnok"
        android:textSize="20sp"
        android:textStyle="bold" />



</LinearLayout>